--- a/src/minshell.html
+++ b/src/minshell.html
@@ -31,6 +31,7 @@
     <link rel="shortcut icon" href="https://www.raylib.com/favicon.ico">
     
     <style>
+        body { margin: 0 };
         canvas.emscripten { border: 0px none; background-color: black; }
     </style>
     <script type='text/javascript' src="https://cdn.jsdelivr.net/gh/eligrey/FileSaver.js/dist/FileSaver.min.js"> </script>
@@ -54,7 +55,7 @@
     </script>
     </head>
     <body>
-        <canvas class=emscripten id=canvas oncontextmenu=event.preventDefault() tabindex=-1></canvas>
+        <canvas class=emscripten id=canvas onkeydown="event.preventDefault()" oncontextmenu=event.preventDefault() tabindex=-1></canvas>
         <p id="output" />
         <script>
             var Module = {
